--- a/PayMeNowWebApp/application.properties
+++ b/PayMeNowWebApp/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Sun Feb 03 20:55:12 EET 2013
+#Mon Feb 04 22:49:40 EET 2013
 app.grails.version=2.2.0
 app.name=PayMeNowWebApp
 app.version=0.1
+plugins.authentication=2.0.1
