--- a/PayMeNowWebApp/application.properties
+++ b/PayMeNowWebApp/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sun Mar 10 14:59:38 EET 2013
-app.grails.version=2.2.0
+#Fri May 24 07:43:26 EEST 2013
+app.grails.version=2.2.1
 app.name=PayMeNowWebApp
 app.version=0.1
