--- a/PayMeNowWebApp/application.properties
+++ b/PayMeNowWebApp/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri May 24 07:43:26 EEST 2013
+#Fri Aug 02 21:51:02 EEST 2013
 app.grails.version=2.2.1
 app.name=PayMeNowWebApp
 app.version=0.1
+plugins.build-test-data=2.0.5
